--- a/templates/about.html
+++ b/templates/about.html
@@ -17,6 +17,7 @@
 <div class="col-6 float-lg-left">
 <p><img src='/images/podmail-example-20180713.png' align='left' style="left: -2em; padding-right: 2em; width: 200px;">
 Easy access to your in game evemails and notifications. PodMail will keep your evemails synced up in game and out, allowing you to mark mails as read, unread, and of course delete them.</p>
+<p style="clear: both;"></p>
 <p>Features:
 <ul>
 <li>View all your EveMails, even the ones you can't see in game.</li>
@@ -25,6 +26,7 @@ Easy access to your in game evemails and notifications. PodMail will keep your e
 <li>View your notifications.</li>
 <li>Browser notifications when you get a new eve mail.</li>
 <li>Mobile friendly!</li>
+<li>PodMail will purge inactive accounts (scopes & evemails) after 7 days.</li>
 </ul>
 </p>
 <p>To Do:
@@ -33,7 +35,6 @@ Easy access to your in game evemails and notifications. PodMail will keep your e
 <li>Add Search</li>
 <li>Themes</li>
 <li>Multi-Char</li>
-<li>Purge inactive accounts (scopes, evemails) after 7 days.</li>
 <li>Map Notifications to look better than default yaml layout.</li>
 </ul>
 </p>
