--- a/templates/mail.html
+++ b/templates/mail.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+    <head>
+    {% include "meta.html" %}
+    </head>
+    <body>
 <div id="mail-id-content" style="display: none;">
 <hr/>
 {% if mail.from %}
@@ -39,3 +45,5 @@ window.onload = function() {
     }
 }
 </script>
+    </body>
+</html>
