--- a/templates/mails.html
+++ b/templates/mails.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+    <head>
+            {% include "meta.html" %}
+    </head>
+    <body>
 <div id="folder-id-content" style="display: none;">
 <hr/>
 <div class="form-check" id="checkbox-master">
@@ -42,3 +48,5 @@ window.onload = function() {
     }
 }
 </script>
+    </body>
+</html>
