--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PodMail</title>
-        <meta name='description' content='PodMail - an ESI EveMail client'>
-
-        <meta property="og:url" content="https://podmail.zzeve.com">
-        <meta property="og:title" content="PodMail - an ESI Evemail client">
-        <meta property="og:description" content="Access, manipulate, and send evemails from any web capable device.">
-        <meta property="og:site_name" content="PodMail">
-        <meta property=”og:image" content="https://podmail.zzeve.com/images/podmail.png">
-        <meta property="og:image:width" content="477"/>
-        <meta property="og:image:height" content="270"/>
+        {% include "meta.html" %}
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
