auto purge notifications >30 days old

--- a/templates/about.html
+++ b/templates/about.html
@@ -23,7 +23,7 @@ Easy access to your in game evemails and notifications. PodMail will keep your e
 <li>View all your EveMails, even the ones you can't see in game.</li>
 <li>Send EveMails to characters, your corporation (non-npc only), or your alliance (if you're in one).</li>
 <li>Mark read, unread, or delete evemails (and syncs with in game).</li>
-<li>View your notifications.</li>
+<li>View your notifications (last 30 days, older is ignored).</li>
 <li>Browser notifications when you get a new eve mail.</li>
 <li>Mobile friendly!</li>
 <li>PodMail will purge inactive accounts (scopes & evemails) after 7 days.</li>
