Fixes #2 and other improvements

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 
         <br/>
         <footer class="footer">
-            <span class="text-muted"><small><small>PodMail - all mails are kept private and not shared with anyone. | <a href='https://github.com/zKillboard/podmail'>GitHub</a> | <a href="/about">About</a></small></small></span>
+            <span class="text-muted"><small><small>PodMail - all mails are kept private and not shared with anyone. | <a href='https://github.com/zKillboard/podmail' target='_blank'>GitHub</a> | <a href="/about">About</a></small></small></span>
         </footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
