--- a/templates/mail.html
+++ b/templates/mail.html
@@ -12,7 +12,7 @@
 {% if mail.is_notifcation != true %}
 <button class="btn btn-sm btn-secondary" id="reply_btn" mail_id="{{ mail.mail_id }}" type="submit" data-toggle="tooltip" title="Reply"><i class="fas fa-reply"></i></button>
 <button class="btn btn-sm btn-secondary" id="reply_all_btn" mail_id="{{ mail.mail_id }}" type="submit" data-toggle="tooltip" title="Reply All" disabled><i class="fas fa-reply-all"></i></button>
-<button class="btn btn-sm btn-secondary" id="forward_btn" mail_id="{{ mail.mail_id }}" type="submit" data-toggle="tooltip" title="Forward"><i class="fas fa-arrow-circle-right"></i></button>
+<button class="btn btn-sm btn-secondary" id="forward_btn" mail_id="{{ mail.mail_id }}" type="submit" data-toggle="tooltip" title="Forward"><i class="fas fa-forward"></i></button>
 <button class="btn btn-secondary btn-sm" id="delete_btn" mail_id="{{ mail.mail_id }}" type="submit" data-toggle="tooltip" title="Delete"><i class="fas fa-trash-alt"></i></button>
 {% endif %}
 <hr/>
