--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -2,7 +2,6 @@
 body.dark{
     background-color: black;
     font-size: 14px;
-    overflow: hidden;
 }
 
 .inverse {
@@ -24,72 +23,24 @@ img {
     text-transform: capitalize;
 }
 
-#content {
-    min-height: calc(100vh - 2.71em);
-    max-height: calc(100vh - 2.71em);
+#tqStatus.offline, #tqStatus.offline::before, .red {
+    color: cyan;
+    content: "X ";
 }
 
-#searchbox {
-    width: 100%;
-    height: 2em;
+#tqStatus.online, #tqStatus.online::before, .green {
+    color: magenta;
+    content: "\2713 ";
 }
 
-#itemparent {
-    min-height: calc(100vh - 4.72em);
-    max-height: calc(100vh - 4.72em);
-    overflow-x: hidden;
-    overflow-y: scroll;
-}
-
-#orders {
-    min-height: calc(100vh - 2.72em);
-    max-height: calc(100vh - 2.72em);
-}
-
-.ordertable {
-    overflow-y: scroll;
-    padding-right: 0.5em;
-    min-height: calc((100vh - 7em) / 2);
-    max-height: calc((100vh - 7em) / 2);
-}
-
-#orders h6 {
-    border-top: solid 1px #ccc;
-    margin-top: 2px;
-}
-
-.hideit {
-    display: none;
-}
-
-.messages {
-    width: 100%;
-    display: flex;
-    flex-flow: column;
-}
-
-.listing[of='buy'] {
-    flex-flow: column-reverse;
-}
-
-.mail_headers {
-    font-weight: bold;
-    border-bottom: solid 1px #eee;
-}
-
-.mail_label, .mail_headers, .mail_header {
-    width: 100%;
-    display: flex;
-}
-
-.mail_label, .mail_headers, .mail_header {
+.folder_label, .mail_header {
     cursor: pointer;
 }
-.mail_label:hover, .mail_header:hover {
+.folder_label:hover, .mail_header:hover, .mail_header.selected {
     background-color: orange;
 }
 
-.mail_headers span, .mail_header span {
+.mail_header span {
     min-width: 10em;
     padding-left: 1em;
 }
@@ -98,19 +49,28 @@ img {
     width: 100%;
 }
 
-.mail_headers {
-    font-weight: bold;
-    box-shadow: 0px 0px 5px #ccc;
-    position: sticky;
-    left: 0;
-    top: 0;
-    z-index: 1;
-    background-color: white;
+.showhide {
+    display: none;
 }
 
+.mail_header_top {
+    display: block;
+    font-weight: bold;
+}
 
 .unread {
     font-weight: bold;
+}
+
+.hideit {
+    display: none;
+}
+
+
+.messages {
+    width: 100%;
+    display: flex;
+    flex-flow: column;
 }
 
 @media (max-width: 575px) {
@@ -120,23 +80,18 @@ img {
     }
 }
 
-#tqStatus.offline, #tqStatus.offline::before {
-    color: cyan; /* red */
-    content: "X ";
-}
-
-#tqStatus.online, #tqStatus.online::before {
-    color: magenta; /* green */
-    content: "\2713 ";
-}
-
-.resizable {
+.resizable-x {
   resize: horizontal;
   overflow: auto;
-  min-width: 250px;
 }
 
-.panelsearch {
-    min-width: 250px;
+.resizable-y {
+  resize: vertical;
+  overflow: auto;
+}
+
+#panelsearch {
+    min-width: 200px;
     max-width: 500px;
+    
 }
