--- a/css/app.css
+++ b/css/app.css
@@ -78,6 +78,18 @@ body {
 	.mail_header_top:hover {
 		background-color: black;
 	}
+
+	input,
+	textarea {
+		background-color: black;
+		border: solid 1px whtie;
+		color: white;
+	}
+
+	input::placeholder,
+	textarea::placeholder {
+		color: #888;
+	}
 }
 
 /* no white on white */
@@ -180,7 +192,8 @@ body {
 	padding-left: 0.25em;
 }
 
-.recipient+.recipient::before {
+.recipient+.recipient::before,
+.compose_recipient+.compose_recipient::before {
 	content: ', ';
 }
 
@@ -258,12 +271,25 @@ hr.vertical-hr {
 	margin-right: 0.5em;
 }
 
-input {
-	background-color: black;
-	border: solid 1px whtie;
-	color: white;
+#compose_body_textarea {
+	margin: 0px;
+	height: calc(100% - 2em);
+	margin-bottom: -1em;
+	padding-bottom: 10em;
 }
 
-input::placeholder {
-	color: white;
+.folder-name:has(+ .unread_count:empty) {
+	font-weight: normal;
+}
+
+.compose_recipient {
+	cursor: pointer;
+}
+
+#compose_recipients_calculated:not(:empty):after {
+	height: 100%;
+	margin-left: 1rem;
+	padding-top: 0.3rem;
+	font-size: 70%;
+	content: '(tap name to remove)';
 }
