--- a/css/app.css
+++ b/css/app.css
@@ -250,3 +250,7 @@ input::placeholder,
 textarea::placeholder {
 	color: #aaa;
 }
+
+.modal.fade .modal-dialog {
+	transition: transform 0.1s ease-out, opacity 0.1s ease-out;
+}
