nicer hamburger btn, switches to left arrow when viewing mail

--- a/css/app.css
+++ b/css/app.css
@@ -417,3 +417,15 @@ textarea::placeholder,
 	font-size: 1rem;
 	pointer-events: auto;
 }
+
+#btn_viewLeft {
+	width: 32px;
+}
+
+#btn_viewLeft:after {
+	content: '☰';
+}
+
+#podmail:has(#mail_container_full:not(.d-none)) #btn_viewLeft:after {
+	content: '⟵';
+}
