--- a/css/app.css
+++ b/css/app.css
@@ -100,6 +100,10 @@ h4 {
 	cursor: default;
 }
 
+.mail_header_top:hover {
+	background: inherit;
+}
+
 .mail_header span.from,
 .mail_header span.timestamp {
 	min-width: 11em;
